# esp32_st7789_lvgl

./: .gitignore  CMakeLists.txt  README.md  code-format.sh  sdkconfig.defaults
src/app/: CMakeLists.txt
src/app/inc/app/: app_config.h  app_types.h  display_panel_mngr.h
src/app/src/: app_mngr.c  display_panel_mngr.c
src/core/: CMakeLists.txt
src/core/inc/core/: core_includes.h  core_tasks.h  esp_lcd_st7789.h  st7789_panel_driver.h
src/core/src/: st7789_panel_driver.c
src/ui/: CMakeLists.txt
src/ui/inc/ui/: ui.h  ui_helpers.h
src/ui/src/: ui.c  ui_events.c  ui_font_Number.c  ui_helpers.c
